--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Global Warming</title>
-	</head>
-	<body>
-      <div id="info" style="width: 640px;">
+<head>
+	<title>Global Warming</title>
+	<style type="text/css">
+		body{
+			text-align: center;
+		}
+	</style>
+</head>
+<body>
+	<p>This videogame made by me in HTML5 with MelonJS.</p>
+	<p>Use Arrows to move and X to jump.</p>
+	<div id="jsapp">
+		<script type="text/javascript" src="lib/melonJS-0.9.1-min.js"></script>
+		<script type="text/javascript" src="gameObj.js"></script>
+		<script type="text/javascript" src="main.js"></script>
+	</div>
+	<div id="info">
 		<div id="fps" style="float: right;">
 			<font color="#FFFFFF", style ="font-size: 10px; font-family: Courier New">
-			<span id="framecounter">(0/0 fps)</span>
+				<span id="framecounter">(0/0 fps)</span>
 			</font>
-		</div></div>
-        <p>This videogame made by me in HTML5 with MelonJS.<br>Use Arrows to move and X to jump.<p>
-		<div id="jsapp">
-		<script type="text/javascript" src="lib/melonJS-0.9.1-min.js"></script>
-      <script type="text/javascript" src="gameObj.js"></script>
-		<script type="text/javascript" src="main.js"></script>
 		</div>
-	</body>
+	</div>
+</body>
 </html>
