--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<style type="text/css">
 		body{
 			text-align: center;
+			font-family:arial;
 		}
 	</style>
 </head>
 <body>
-	<p>This videogame made by me in HTML5 with MelonJS.</p>
-	<p>Use Arrows to move and X to jump.</p>
+	<h1>Use Arrows to move and X to jump.</h1>
 	<div id="jsapp">
 		<script type="text/javascript" src="lib/melonJS-0.9.1-min.js"></script>
 		<script type="text/javascript" src="gameObj.js"></script>
